src/sass/layout/_main.scss
h1,
h2,
h3,
h4,
h5,
h6,
p {
  max-width: $grid-base;
  margin-left: auto;
  margin-right: auto;
}

.block {
  padding-top: 8rem;
  padding-bottom: 8rem;
}

.container {
  max-width: $grid-base;
  margin-left: auto;
  margin-right: auto;
}

.content,
.head,
.container {
  padding-left: 2rem;
  padding-right: 2rem;
}

.block.block-hero {
  background-image: url('../images/mountains.jpg');
  background-repeat: no-repeat;
  background-size: 150% auto;
  background-position: center -25rem;
  height: 125rem;
  display: block;
  overflow: hidden;
  padding-top: 0;

  @media (max-width: 1500px) {
    background-position: center -20rem;
  }

  @media (max-width: 1200px) {
    background-position: center -10rem;
  }

  @media (max-width: 1100px) {
    background-position: center 0;
  }

  @media (max-width: 950px) {
    background-position: center 20rem;
  }

  @media (max-width: 750px) {
    background-position: center 30rem;
  }

  @media (max-width: 500px) {
    background-position: center 40rem;
  }

  .content {
    margin-top: 19rem;
    text-align: center;

    @media (max-width: 500px) {
      margin-top: 12rem;
    }
  }

  .gravatar {
    border-radius: 50%;
    width: 10rem;
    height: 10rem;
    margin: 0 auto;
  }

  .gravatar-description {
    font-size: 1.4rem;
    max-width: 25rem;
    text-align: center;
    position: relative;

    svg {
      width: 6rem;
      height: 6rem;
      position: absolute;
      top: -55px;
      transform: rotate(-75deg);
      right: 26px;
    }
  }

  h1 {
    @include responsive-font(6vw, 100px, 140px);
    margin-bottom: 0;
    margin-top: 0;
    line-height: .8;

    @media (max-width: 1000px) {
      @include responsive-font(6vw, 75px, 140px);
    }

    @media (max-width: 700px) {
      @include responsive-font(6vw, 55px, 140px);
    }

    span {
      &:nth-child(1) {
        color: $color-synthwavedarkblue;
      }

      &:nth-child(2) {
        color: $color-synthwaveblue;
      }

      &:nth-child(3) {
        color: $color-synthwavered;
      }
    }
  }

  p {
    @include responsive-font(4vw, 22px, 28px);
    max-width: 70rem;
    margin-left: auto;
    margin-right: auto;

    span {
      color: #757684;
    }
  }
}

.block.block-doing-stuff {
  text-align: center;

  p {
    margin-top: 0;
    margin-bottom: 1rem;
  }

  h2 {
    @include responsive-font(3.2vw, 32px, 68px);
    margin-top: 0;
    margin-bottom: 0;
  }

  .head {
    margin-bottom: 12rem;

    span {
      &:nth-child(1) {
        color: $color-synthwavesunsetred;
      }

      &:nth-child(2) {
        color: $color-synthwavesunsetorange;
      }

      &:nth-child(3) {
        color: $color-synthwavesunsetyellow;
      }

      &:nth-child(4) {
        color: $color-synthwavesunsetpink;
      }
    }
  }
}

.block.block-my-things {
  text-align: center;

  h2 {
    @include responsive-font(3vw, 18px, 22px);
    color: #333;
    margin-top: 0;
    margin-bottom: 0;
    width: 100%;
  }

  h2 a {
    color: #4078c0;
    text-decoration: none;
    transition: all 1s;
  }

  h2 a:hover {
    color: #333;
  }

  .head p {
    font-size: 1.4rem;
    margin-top: 0;
    margin-bottom: 0;
    width: 100%;
  }
}

